'Fixed' scrollbars on game

--- a/res/aboutPage.css
+++ b/res/aboutPage.css
@@ -52,6 +52,7 @@ h4{
     height: 300px;
     background-color: black;
     justify-content: left;
+    position: relative;
 }
 
 .design{
